--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-testing-library": "^6.2.0",
     "jsdom": "^24.0.0",
     "prettier": "^3.2.5",
+    "rollup": "^4.12.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vitest": "^1.2.2"
